--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -64,7 +64,7 @@ body{
 
 @media screen and (max-width: 900px) {
     #inner-map-div-showpage {
-        width: 100%;
+        width: 90%;
         float: none;
     }
 }
@@ -78,11 +78,14 @@ body{
 
 @media screen and (max-width: 900px) {
     #all-campground-index-page-map{
-        width: 100%;
+        width: 90%;
         float: none;
     }
+    #campground-index-page{
+        width: 90%;
+        margin-top: 2vh;
+    }
 }
-
 
 
 
